# sct

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  linter.yml  publish.yml
.sct/: config.json.example
sct/: __init__.py  __main__.py  cli.py  sct.py
sct/core/: __init__.py  config.py  doctor.py  errors.py  github.py  markers.py  models.py  patch.py  refs.py  scanner.py  service.py  store.py  sync.py  validate.py
sct/tui/: __init__.py  app.py  theme.tcss
tests/: test_doctor.py  test_init.py  test_integration.py  test_markers.py  test_packaging.py  test_scanner_exclude.py  test_scanner_ids.py
