[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sct"
version = "0.2.1"
description = "Source Code Todo — scan TODO/DONE markers in code"
readme = "README.md"
requires-python = ">=3.10"
# Runtime versions: requirements.txt (pip install -r requirements.txt)
dependencies = [
    "textual>=0.47.0,<1.0.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
sct = "sct.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sct*"]
