[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sctodo"
dynamic = ["version"]
description = "Source Code Todo — scan TODO/DONE markers in code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Basyrov Rustam"},
]
keywords = ["todo", "source-code", "cli", "tui", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
# Runtime versions: requirements.txt (pip install -r requirements.txt)
dependencies = [
    "textual>=0.47.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/rustbas/sct"
Repository = "https://github.com/rustbas/sct"
Changelog = "https://github.com/rustbas/sct/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/sctodo/"

[project.optional-dependencies]
dev = []

[project.scripts]
sct = "sct.cli:main"

[tool.setuptools.dynamic]
version = {attr = "sct.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["sct*"]

[tool.setuptools.package-data]
"sct.tui" = ["*.tcss"]
